fix(Candytar): Inline positioning causing extra space inside it's container. Regression from #245

--- a/src/components/candytar/Candytar.css
+++ b/src/components/candytar/Candytar.css
@@ -1,7 +1,7 @@
 @import '../../materials/colors';
 
 .ax-candytar {
-  display: inline-flex;
+  display: block;
 }
 
 .ax-candytar--rose {
